--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(libmimalloc C CXX)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-option(MI_OVERRIDE          "Override the standard malloc interface" ON)
+option(MI_OVERRIDE          "Override the standard malloc and new/delete interface" ON)
+option(MI_NO_NEW_OVERRIDE   "Don't override the standard C++ new/delete (will override malloc only. Doesn't do anything if MI_OVERRIDE is OFF)" OFF)
 option(MI_DEBUG_FULL        "Use full internal heap invariant checking in DEBUG mode" OFF)
 option(MI_SECURE            "Use full security mitigations (like guard pages, allocation randomization, double-free mitigation, and free-list corruption detection)" OFF)
 option(MI_USE_CXX           "Use the C++ compiler to compile the library" OFF)
@@ -283,11 +284,18 @@ endif()
 if (MI_OVERRIDE MATCHES "ON")
   if(MI_BUILD_DYNAMIC MATCHES "ON")
     target_compile_definitions(mimalloc PRIVATE MI_MALLOC_OVERRIDE)
+    if(MI_NO_NEW_OVERRIDE MATCHES "ON")
+      target_compile_definitions(mimalloc PRIVATE MI_MALLOC_NO_NEW_OVERRIDE)
+    endif()
   endif()
 
   if(NOT WIN32)
     # It is only possible to override malloc on Windows when building as a DLL.
     target_compile_definitions(mimalloc-static PRIVATE MI_MALLOC_OVERRIDE)
     target_compile_definitions(mimalloc-obj PRIVATE MI_MALLOC_OVERRIDE)
+    if(MI_NO_NEW_OVERRIDE MATCHES "ON")
+      target_compile_definitions(mimalloc-static PRIVATE MI_MALLOC_NO_NEW_OVERRIDE)
+      target_compile_definitions(mimalloc-obj PRIVATE MI_MALLOC_NO_NEW_OVERRIDE)
+    endif()
   endif()
 endif()
